# dock

./: .gitignore  LICENSE  Makefile  README.md  dock  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release-to-tap.yml  release.yml
.kiro/specs/dock-config-manager/: design.md  requirements.md  tasks.md
Formula/: PUBLISHING_CHECKLIST.md  README.md  dock.rb  dock.rb.tmpl
completions/: _dock  dock.bash
dock/: __init__.py  __main__.py  cli.py
dock/adapters/: __init__.py  dockutil.py  plist.py
dock/config/: __init__.py  converter.py  loader.py  models.py  validator.py
dock/dock/: __init__.py  diff.py  executor.py  plan.py  state.py
dock/services/: backup_service.py  reset_service.py  show_service.py  validate_service.py
dock/utils/: __init__.py  output.py  platform.py
lib/: config.sh  dock_ops.sh  env.sh  snapshot.sh  string_utils.sh  version.sh
packaging/homebrew/Formula/: dock.rb
scripts/: generate-completions.sh  test-formula.sh  update-formula.sh
tests/: __init__.py  test_cli.py
tests/adapters/: __init__.py  test_dockutil.py  test_executor.py  test_plist.py
tests/bats/: dock.bats  string_utils.bats
tests/config/: __init__.py  test_loader.py  test_models.py  test_validator.py
tests/dock/: __init__.py  test_diff.py  test_executor.py  test_state.py
tests/services/: test_reset_service.py
tests/utils/: test_output.py  test_platform.py
